// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeatureExplorer > should allow user to modify feature data 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      class="h-100 d-flex flex-column justify-content-start p-3"
    >
      <div
        class="d-flex align-items-center mb-3"
      >
        <h5
          class="me-3"
        >
          Feature explorer
        </h5>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info abc-icon _icon_1b47e8"
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            style="width: 1.2rem; height: 1.2rem;"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="d-flex flex-row mb-2"
      >
        <div
          class=""
        >
          <select
            class="form-select"
            data-testid="layer-selector"
          >
            <option
              value="None"
            >
              Select a layer
            </option>
            <option
              value="test-layer-id-1"
            >
              Geometries
            </option>
          </select>
        </div>
      </div>
      <div
        class="d-flex flex-column mb-2"
      >
        <div
          class="d-flex align-items-center"
        >
          <input
            class="form-control me-2"
            data-testid="search-query"
            placeholder="Search in data"
            type="text"
            value=""
          />
          <button
            class="btn btn-outline-secondary"
            data-testid="settings"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gear abc-icon _icon_1b47e8"
              data-icon="gear"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="_list_09fd7d p-1"
      >
        <div
          data-testid="feature-list"
          style="height: 100%; overflow: auto;"
        >
          <div
            style="height: 360px; width: 100%; position: relative;"
          >
            <div
              data-index="0"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04 mb-3"
                      data-testid="feature"
                      title="Updated name"
                    >
                      <span
                        class="text-secondary"
                      >
                        1
                        .
                      </span>
                       
                      <span
                        class="fw-bold"
                      >
                        Updated name
                      </span>
                    </div>
                    <table
                      class="w-100 table table-sm table-bordered table-hover"
                    >
                      <tbody>
                        <tr>
                          <td
                            class="w-25"
                          >
                            osm_id
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="-4511221"
                          >
                            -4511221
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            boundary
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="administrative"
                          >
                            administrative
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            admin_level
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="6"
                          >
                            6
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            parents
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="-3360565,-252645"
                          >
                            -3360565,-252645
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            name
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="Updated name"
                          >
                            Updated name
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            local_name
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="Updated name"
                          >
                            Updated name
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            name_en
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="Undefined value"
                          >
                            Undefined value
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            newVariable
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="New value"
                          >
                            New value
                          </td>
                        </tr>
                        <tr>
                          <td>
                            Geometry
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                          >
                            MultiPolygon
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <div
                      class="w-100 d-flex justify-content-end"
                    >
                      <button
                        class="btn btn-sm btn-outline-secondary me-2"
                        data-testid="edit-data"
                        title="Edit data"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-pen abc-icon _icon_1b47e8 mx-1"
                          data-icon="pen"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M352.9 21.2L308 66.1 445.9 204 490.8 159.1C504.4 145.6 512 127.2 512 108s-7.6-37.6-21.2-51.1L455.1 21.2C441.6 7.6 423.2 0 404 0s-37.6 7.6-51.1 21.2zM274.1 100L58.9 315.1c-10.7 10.7-18.5 24.1-22.6 38.7L.9 481.6c-2.3 8.3 0 17.3 6.2 23.4s15.1 8.5 23.4 6.2l127.8-35.5c14.6-4.1 27.9-11.8 38.7-22.6L412 237.9 274.1 100z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                      <button
                        class="btn btn-sm btn-outline-secondary me-2"
                        title="Zoom on"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-magnifying-glass abc-icon _icon_1b47e8 mx-1"
                          data-icon="magnifying-glass"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                      <div
                        class="dropdown"
                      >
                        <button
                          aria-expanded="false"
                          class="dropdown-toggle btn btn-outline-secondary"
                          data-testid="feature-actions"
                          id="_r_15_"
                          type="button"
                        >
                          More
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="1"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(800px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Florida"
                    >
                      <span
                        class="text-secondary"
                      >
                        2
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Florida
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="2"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(1600px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Manuel M. Caballero"
                    >
                      <span
                        class="text-secondary"
                      >
                        3
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Manuel M. Caballero
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="3"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(2400px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Warnes"
                    >
                      <span
                        class="text-secondary"
                      >
                        4
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Warnes
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="4"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(3200px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Andrés Ibáñez"
                    >
                      <span
                        class="text-secondary"
                      >
                        5
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Andrés Ibáñez
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="5"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(4000px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Obispo Santistevan"
                    >
                      <span
                        class="text-secondary"
                      >
                        6
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Obispo Santistevan
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="_r_15_"
    class="dropdown-menu"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    style="position: absolute; top: 0px; right: auto; bottom: auto; left: 0px; transform: translate(0px, 2px);"
    x-placement="bottom-start"
  >
    <a
      class="dropdown-item"
      data-rr-ui-dropdown-item=""
      href="#"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-highlighter abc-icon _icon_1b47e8 me-2"
        data-icon="highlighter"
        data-prefix="fas"
        role="img"
        viewBox="0 0 576 512"
      >
        <path
          d="M315 315L473.4 99.9 444.1 70.6 229 229 315 315zm-187 5l0 0 0-71.7c0-15.3 7.2-29.6 19.5-38.6L420.6 8.4C428 2.9 437 0 446.2 0 457.6 0 468.5 4.5 476.6 12.6l54.8 54.8c8.1 8.1 12.6 19 12.6 30.5 0 9.2-2.9 18.2-8.4 25.6L334.4 396.5c-9 12.3-23.4 19.5-38.6 19.5l-71.7 0-25.4 25.4c-12.5 12.5-32.8 12.5-45.3 0l-50.7-50.7c-12.5-12.5-12.5-32.8 0-45.3L128 320zM7 466.3l51.7-51.7 70.6 70.6-19.7 19.7c-4.5 4.5-10.6 7-17 7L24 512c-13.3 0-24-10.7-24-24l0-4.7c0-6.4 2.5-12.5 7-17z"
          fill="currentColor"
        />
      </svg>
      Temporarily highlight
    </a>
    <a
      class="dropdown-item"
      data-rr-ui-dropdown-item=""
      href="#"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-plus abc-icon _icon_1b47e8 me-2"
        data-icon="plus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M256 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 160-160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l160 0 0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-160 160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-160 0 0-160z"
          fill="currentColor"
        />
      </svg>
      Select / unselect
    </a>
    <a
      class="dropdown-item"
      data-rr-ui-dropdown-item=""
      href="#"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-trash abc-icon _icon_1b47e8 me-2"
        data-icon="trash"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
          fill="currentColor"
        />
      </svg>
      Delete
    </a>
  </div>
</body>
`;

exports[`FeatureExplorer > should display feature data 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      class="h-100 d-flex flex-column justify-content-start p-3"
    >
      <div
        class="d-flex align-items-center mb-3"
      >
        <h5
          class="me-3"
        >
          Feature explorer
        </h5>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info abc-icon _icon_1b47e8"
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            style="width: 1.2rem; height: 1.2rem;"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="d-flex flex-row mb-2"
      >
        <div
          class=""
        >
          <select
            class="form-select"
            data-testid="layer-selector"
          >
            <option
              value="None"
            >
              Select a layer
            </option>
            <option
              value="test-layer-id-1"
            >
              Geometries
            </option>
          </select>
        </div>
      </div>
      <div
        class="d-flex flex-column mb-2"
      >
        <div
          class="d-flex align-items-center"
        >
          <input
            class="form-control me-2"
            data-testid="search-query"
            placeholder="Search in data"
            type="text"
            value=""
          />
          <button
            class="btn btn-outline-secondary"
            data-testid="settings"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gear abc-icon _icon_1b47e8"
              data-icon="gear"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="_list_09fd7d p-1"
      >
        <div
          data-testid="feature-list"
          style="height: 100%; overflow: auto;"
        >
          <div
            style="height: 360px; width: 100%; position: relative;"
          >
            <div
              data-index="0"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04 mb-3"
                      data-testid="feature"
                      title="Provincia Cordillera"
                    >
                      <span
                        class="text-secondary"
                      >
                        1
                        .
                      </span>
                       
                      <span
                        class="fw-bold"
                      >
                        Provincia Cordillera
                      </span>
                    </div>
                    <table
                      class="w-100 table table-sm table-bordered table-hover"
                    >
                      <tbody>
                        <tr>
                          <td
                            class="w-25"
                          >
                            osm_id
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="-4511221"
                          >
                            -4511221
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            boundary
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="administrative"
                          >
                            administrative
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            admin_level
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="6"
                          >
                            6
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            parents
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="-3360565,-252645"
                          >
                            -3360565,-252645
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            name
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="Provincia Cordillera"
                          >
                            Provincia Cordillera
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            local_name
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="Provincia Cordillera"
                          >
                            Provincia Cordillera
                          </td>
                        </tr>
                        <tr>
                          <td
                            class="w-25"
                          >
                            name_en
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                            title="Undefined value"
                          >
                            Undefined value
                          </td>
                        </tr>
                        <tr>
                          <td>
                            Geometry
                          </td>
                          <td
                            class="_dataCell_db8d04 text-bold"
                          >
                            MultiPolygon
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <div
                      class="w-100 d-flex justify-content-end"
                    >
                      <button
                        class="btn btn-sm btn-outline-secondary me-2"
                        data-testid="edit-data"
                        title="Edit data"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-pen abc-icon _icon_1b47e8 mx-1"
                          data-icon="pen"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M352.9 21.2L308 66.1 445.9 204 490.8 159.1C504.4 145.6 512 127.2 512 108s-7.6-37.6-21.2-51.1L455.1 21.2C441.6 7.6 423.2 0 404 0s-37.6 7.6-51.1 21.2zM274.1 100L58.9 315.1c-10.7 10.7-18.5 24.1-22.6 38.7L.9 481.6c-2.3 8.3 0 17.3 6.2 23.4s15.1 8.5 23.4 6.2l127.8-35.5c14.6-4.1 27.9-11.8 38.7-22.6L412 237.9 274.1 100z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                      <button
                        class="btn btn-sm btn-outline-secondary me-2"
                        title="Zoom on"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-magnifying-glass abc-icon _icon_1b47e8 mx-1"
                          data-icon="magnifying-glass"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 512 512"
                        >
                          <path
                            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                      <div
                        class="dropdown"
                      >
                        <button
                          aria-expanded="false"
                          class="dropdown-toggle btn btn-outline-secondary"
                          data-testid="feature-actions"
                          id="_r_s_"
                          type="button"
                        >
                          More
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="1"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(800px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Florida"
                    >
                      <span
                        class="text-secondary"
                      >
                        2
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Florida
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="2"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(1600px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Manuel M. Caballero"
                    >
                      <span
                        class="text-secondary"
                      >
                        3
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Manuel M. Caballero
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="3"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(2400px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Warnes"
                    >
                      <span
                        class="text-secondary"
                      >
                        4
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Warnes
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="4"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(3200px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Andrés Ibáñez"
                    >
                      <span
                        class="text-secondary"
                      >
                        5
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Andrés Ibáñez
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="5"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(4000px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Obispo Santistevan"
                    >
                      <span
                        class="text-secondary"
                      >
                        6
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Obispo Santistevan
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeatureExplorer > should display features and select automatically a feature title 1`] = `
<body>
  <div>
    <div
      class="h-100 d-flex flex-column justify-content-start p-3"
    >
      <div
        class="d-flex align-items-center mb-3"
      >
        <h5
          class="me-3"
        >
          Feature explorer
        </h5>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info abc-icon _icon_1b47e8"
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            style="width: 1.2rem; height: 1.2rem;"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="d-flex flex-row mb-2"
      >
        <div
          class=""
        >
          <select
            class="form-select"
            data-testid="layer-selector"
          >
            <option
              value="None"
            >
              Select a layer
            </option>
            <option
              value="test-layer-id-1"
            >
              Geometries
            </option>
          </select>
        </div>
      </div>
      <div
        class="d-flex flex-column mb-2"
      >
        <div
          class="d-flex align-items-center"
        >
          <input
            class="form-control me-2"
            data-testid="search-query"
            placeholder="Search in data"
            type="text"
            value=""
          />
          <button
            class="btn btn-outline-secondary"
            data-testid="settings"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gear abc-icon _icon_1b47e8"
              data-icon="gear"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="_list_09fd7d p-1"
      >
        <div
          data-testid="feature-list"
          style="height: 100%; overflow: auto;"
        >
          <div
            style="height: 360px; width: 100%; position: relative;"
          >
            <div
              data-index="0"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Cordillera"
                    >
                      <span
                        class="text-secondary"
                      >
                        1
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Cordillera
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="1"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(800px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Florida"
                    >
                      <span
                        class="text-secondary"
                      >
                        2
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Florida
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="2"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(1600px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Manuel M. Caballero"
                    >
                      <span
                        class="text-secondary"
                      >
                        3
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Manuel M. Caballero
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="3"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(2400px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Warnes"
                    >
                      <span
                        class="text-secondary"
                      >
                        4
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Warnes
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="4"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(3200px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Andrés Ibáñez"
                    >
                      <span
                        class="text-secondary"
                      >
                        5
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Andrés Ibáñez
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="5"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(4000px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Obispo Santistevan"
                    >
                      <span
                        class="text-secondary"
                      >
                        6
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Obispo Santistevan
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeatureExplorer > should display features and select automatically a feature title 2`] = `
[
  "Provincia Cordillera",
  "Provincia Florida",
  "Provincia Manuel M. Caballero",
  "Provincia Warnes",
  "Provincia Andrés Ibáñez",
  "Provincia Obispo Santistevan",
]
`;

exports[`FeatureExplorer > should display nothing if no active layer 1`] = `
<body>
  <div>
    <div
      class="h-100 d-flex flex-column justify-content-start p-3"
    >
      <div
        class="d-flex align-items-center mb-3"
      >
        <h5
          class="me-3"
        >
          Feature explorer
        </h5>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info abc-icon _icon_1b47e8"
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            style="width: 1.2rem; height: 1.2rem;"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="d-flex flex-row mb-2"
      >
        <div
          class=""
        >
          <select
            class="form-select"
            data-testid="layer-selector"
          >
            <option
              value="None"
            >
              Select a layer
            </option>
          </select>
        </div>
      </div>
      <div
        class="d-flex flex-column mb-2"
      >
        <div
          class="d-flex align-items-center"
        >
          <input
            class="form-control me-2"
            data-testid="search-query"
            disabled=""
            placeholder="Search in data"
            type="text"
            value=""
          />
          <button
            class="btn btn-outline-secondary"
            data-testid="settings"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gear abc-icon _icon_1b47e8"
              data-icon="gear"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="_list_09fd7d p-1"
      >
        <div
          class="my-3"
        >
          Select a vector layer to view its data
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeatureExplorer > should display nothing if no feature 1`] = `
<body>
  <div>
    <div
      class="h-100 d-flex flex-column justify-content-start p-3"
    >
      <div
        class="d-flex align-items-center mb-3"
      >
        <h5
          class="me-3"
        >
          Feature explorer
        </h5>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info abc-icon _icon_1b47e8"
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            style="width: 1.2rem; height: 1.2rem;"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="d-flex flex-row mb-2"
      >
        <div
          class=""
        >
          <select
            class="form-select"
            data-testid="layer-selector"
          >
            <option
              value="None"
            >
              Select a layer
            </option>
            <option
              value="test-layer-id-1"
            >
              Geometries
            </option>
          </select>
        </div>
      </div>
      <div
        class="d-flex flex-column mb-2"
      >
        <div
          class="d-flex align-items-center"
        >
          <input
            class="form-control me-2"
            data-testid="search-query"
            placeholder="Search in data"
            type="text"
            value=""
          />
          <button
            class="btn btn-outline-secondary"
            data-testid="settings"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gear abc-icon _icon_1b47e8"
              data-icon="gear"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="_list_09fd7d p-1"
      >
        <div>
          This layer contains no data
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeatureExplorer > should filter features on search 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      class="h-100 d-flex flex-column justify-content-start p-3"
    >
      <div
        class="d-flex align-items-center mb-3"
      >
        <h5
          class="me-3"
        >
          Feature explorer
        </h5>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info abc-icon _icon_1b47e8"
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            style="width: 1.2rem; height: 1.2rem;"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="d-flex flex-row mb-2"
      >
        <div
          class=""
        >
          <select
            class="form-select"
            data-testid="layer-selector"
          >
            <option
              value="None"
            >
              Select a layer
            </option>
            <option
              value="test-layer-id-1"
            >
              Geometries
            </option>
          </select>
        </div>
      </div>
      <div
        class="d-flex flex-column mb-2"
      >
        <div
          class="d-flex align-items-center"
        >
          <input
            class="form-control me-2"
            data-testid="search-query"
            placeholder="Search in data"
            type="text"
            value="Cordillera"
          />
          <button
            class="btn btn-outline-secondary"
            data-testid="settings"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gear abc-icon _icon_1b47e8"
              data-icon="gear"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="_list_09fd7d p-1"
      >
        <div
          data-testid="feature-list"
          style="height: 100%; overflow: auto;"
        >
          <div
            style="height: 360px; width: 100%; position: relative;"
          >
            <div
              data-index="0"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="Provincia Cordillera"
                    >
                      <span
                        class="text-secondary"
                      >
                        1
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        Provincia Cordillera
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeatureExplorer > should filter features on search 2`] = `
[
  "Provincia Cordillera",
]
`;

exports[`FeatureExplorer > should use selected title field 1`] = `
<body
  class=""
  style=""
>
  <div>
    <div
      class="h-100 d-flex flex-column justify-content-start p-3"
    >
      <div
        class="d-flex align-items-center mb-3"
      >
        <h5
          class="me-3"
        >
          Feature explorer
        </h5>
        <div>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-info abc-icon _icon_1b47e8"
            data-icon="circle-info"
            data-prefix="fas"
            role="img"
            style="width: 1.2rem; height: 1.2rem;"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="d-flex flex-row mb-2"
      >
        <div
          class=""
        >
          <select
            class="form-select"
            data-testid="layer-selector"
          >
            <option
              value="None"
            >
              Select a layer
            </option>
            <option
              value="test-layer-id-1"
            >
              Geometries
            </option>
          </select>
        </div>
      </div>
      <div
        class="d-flex flex-column mb-2"
      >
        <div
          class="d-flex align-items-center"
        >
          <input
            class="form-control me-2"
            data-testid="search-query"
            placeholder="Search in data"
            type="text"
            value=""
          />
          <button
            class="btn btn-outline-secondary"
            data-testid="settings"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-gear abc-icon _icon_1b47e8"
              data-icon="gear"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="_list_09fd7d p-1"
      >
        <div
          data-testid="feature-list"
          style="height: 100%; overflow: auto;"
        >
          <div
            style="height: 360px; width: 100%; position: relative;"
          >
            <div
              data-index="0"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(0px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="-4511221"
                    >
                      <span
                        class="text-secondary"
                      >
                        1
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        -4511221
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="1"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(800px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="-4510333"
                    >
                      <span
                        class="text-secondary"
                      >
                        2
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        -4510333
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="2"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(1600px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="-4510325"
                    >
                      <span
                        class="text-secondary"
                      >
                        3
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        -4510325
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="3"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(2400px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="-4510305"
                    >
                      <span
                        class="text-secondary"
                      >
                        4
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        -4510305
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="4"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(3200px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="-4510304"
                    >
                      <span
                        class="text-secondary"
                      >
                        5
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        -4510304
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              data-index="5"
              style="position: absolute; top: 0px; left: 0px; width: 100%; transform: translateY(4000px);"
            >
              <div
                class="me-1 mb-1"
              >
                <div
                  class="card"
                >
                  <div
                    class="card-body"
                  >
                    <div
                      class="_header_db8d04"
                      data-testid="feature"
                      title="-4510265"
                    >
                      <span
                        class="text-secondary"
                      >
                        6
                        .
                      </span>
                       
                      <span
                        class=""
                      >
                        -4510265
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`FeatureExplorer > should use selected title field 2`] = `
[
  "-4511221",
  "-4510333",
  "-4510325",
  "-4510305",
  "-4510304",
  "-4510265",
]
`;
